# BEvade

./: .gitignore  CMakeLists.txt  README.md
src/: bypass.c  bypass.h  crt_stubs.c  dll_proxy.c  dllmain.c  hooks.c  hooks.h  joaat.h  log.h  pattern_scan.c  pattern_scan.h  ptr_calc.h  types.h  version.def
